demo2/virtual-service-recommendation-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v2
      weight: 100
#      weight: 90
#    - destination:
#        host: recommendation
#        subset: version-v1
#      weight: 10
